Inclusão do cors e novo endpoint
