# api-docs/swagger.yaml
@@ -176,6 +176,46 @@ paths:
           description: Foi gerada uma exceção no servidor
       security:
         - jwtToken: []
+  '/stock/v2/verificar/{idProduto}/{quantidade}':
+    get:
+      tags:
+        - Stock
+      summary: 'Verifica se o produto informado possui em estoque, pelo menos, a quantidade informada'
+      operationId: verificarRetornandoJsonUsingGET
+      produces:
+        - application/json
+        - application/x-yaml
+        - application/xml
+      parameters:
+        - name: idProduto
+          in: path
+          description: Número do ID do produto que se deseja verificar estoque
+          required: true
+          type: integer
+          format: int64
+        - name: quantidade
+          in: path
+          description: Quantidade do estoque que se deseja verificar a existência
+          required: true
+          type: integer
+          format: int32
+      responses:
+        '200':
+          description: Indica que o estoque do porduto especificado possui a quantidade especificada
+          schema:
+            $ref: '#/definitions/StockVerificationVO'
+        '400':
+          description: Nenhum registro encotrado para o ID especificado
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '500':
+          description: Foi gerada uma exceção no servidor
+      security:
+        - jwtToken: []
   '/stock/verificar/{idProduto}/{quantidade}':
     get:
       tags:
@@ -267,3 +307,12 @@ definitions:
         type: integer
         format: int32
     title: StockVO
+  StockVerificationVO:
+    type: object
+    properties:
+      idProduto:
+        type: integer
+        format: int64
+      possuiEstoque:
+        type: boolean
+    title: StockVerificationVO
